# kagent-a2a-proxy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  conftest.py  pyproject.toml  test_agent_runner.py  test_api.py  test_config.py  test_hitl.py  test_kagent_client.py  test_mcp_server.py  test_resolve_agent.py  test_translator.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-21-lint-typecheck.md  2026-05-21-surf-agnostic.md
docs/superpowers/specs/: 2026-05-21-lint-typecheck-design.md  2026-05-21-surf-agnostic-design.md
examples/: deploy.yaml  librechat-config.yaml
kagent_a2a_proxy/: agent_runner.py  config.py  hitl.py  kagent_client.py  main.py  mcp_server.py  models.py  translator.py
