[project]
name = "kagent-a2a-proxy"
version = "0.0.3"
description = "OpenAI-compatible streaming chat completions and MCP server for kagent agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastmcp>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kagent_a2a_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501", "B017"]
"conftest.py" = ["E501"]
"kagent_a2a_proxy/translator.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "kagent_a2a_proxy.*"
strict = true

[[tool.mypy.overrides]]
module = ["test_*", "conftest"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["fastmcp.*", "respx.*"]
ignore_missing_imports = true
